Found the link border not showing issue - the 'text-decoration' was blocked from the tailwind css, fixed that - still going with the new updated markdown to html formatting settings

--- a/styles/index.css
+++ b/styles/index.css
@@ -13,3 +13,7 @@
 /* Stop purging. */
 
 /* Your own custom utilities */
+
+a {
+  text-decoration: underline;
+}
